tool/y.output

state 0
	$accept: .program $end 
	package_head: .    (2)

	PACKAGE  shift 3
	.  reduce 2 (src line 94)

	program  goto 1
	package_head  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


2: shift/reduce conflict (shift 6(0), red'n 5(0)) on INCLUDE
state 2
	program:  package_head.include_head struct_head const_head body 
	include_head: .    (5)

	INCLUDE  shift 6
	.  reduce 5 (src line 113)

	include_head  goto 4
	include_define  goto 5

state 3
	package_head:  PACKAGE.IDENTIFIER 
	package_head:  PACKAGE.IDENTIFIER_DOT 

	IDENTIFIER  shift 7
	IDENTIFIER_DOT  shift 8
	.  error


4: shift/reduce conflict (shift 12(0), red'n 9(0)) on STRUCT
state 4
	program:  package_head include_head.struct_head const_head body 
	include_head:  include_head.include_define 
	struct_head: .    (9)

	INCLUDE  shift 6
	STRUCT  shift 12
	.  reduce 9 (src line 132)

	struct_head  goto 9
	include_define  goto 10
	struct_define  goto 11

state 5
	include_head:  include_define.    (6)

	.  reduce 6 (src line 117)


state 6
	include_define:  INCLUDE.STRING_DEFINITION 

	STRING_DEFINITION  shift 13
	.  error


state 7
	package_head:  PACKAGE IDENTIFIER.    (3)

	.  reduce 3 (src line 98)


state 8
	package_head:  PACKAGE IDENTIFIER_DOT.    (4)

	.  reduce 4 (src line 105)


9: shift/reduce conflict (shift 17(0), red'n 16(0)) on FCONST
state 9
	program:  package_head include_head struct_head.const_head body 
	struct_head:  struct_head.struct_define 
	const_head: .    (16)

	FCONST  shift 17
	STRUCT  shift 12
	.  reduce 16 (src line 176)

	const_head  goto 14
	struct_define  goto 15
	const_define  goto 16

state 10
	include_head:  include_head include_define.    (7)

	.  reduce 7 (src line 119)


state 11
	struct_head:  struct_define.    (10)

	.  reduce 10 (src line 136)


state 12
	struct_define:  STRUCT.IDENTIFIER struct_mem_declaration END 

	IDENTIFIER  shift 18
	.  error


state 13
	include_define:  INCLUDE STRING_DEFINITION.    (8)

	.  reduce 8 (src line 123)


14: shift/reduce conflict (shift 22(0), red'n 20(0)) on FUNC
state 14
	program:  package_head include_head struct_head const_head.body 
	const_head:  const_head.const_define 
	body: .    (20)

	FUNC  shift 22
	FCONST  shift 17
	.  reduce 20 (src line 195)

	body  goto 19
	const_define  goto 20
	function_declaration  goto 21

state 15
	struct_head:  struct_head struct_define.    (11)

	.  reduce 11 (src line 138)


state 16
	const_head:  const_define.    (17)

	.  reduce 17 (src line 180)


state 17
	const_define:  FCONST.IDENTIFIER ASSIGN explicit_value 

	IDENTIFIER  shift 23
	.  error


18: shift/reduce conflict (shift 25(0), red'n 13(0)) on IDENTIFIER
state 18
	struct_define:  STRUCT IDENTIFIER.struct_mem_declaration END 
	struct_mem_declaration: .    (13)

	IDENTIFIER  shift 25
	.  reduce 13 (src line 152)

	struct_mem_declaration  goto 24

state 19
	program:  package_head include_head struct_head const_head body.    (1)
	body:  body.function_declaration 

	FUNC  shift 22
	.  reduce 1 (src line 87)

	function_declaration  goto 26

state 20
	const_head:  const_head const_define.    (18)

	.  reduce 18 (src line 182)


state 21
	body:  function_declaration.    (21)

	.  reduce 21 (src line 199)


state 22
	function_declaration:  FUNC.IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET block END 
	function_declaration:  FUNC.IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET END 

	IDENTIFIER  shift 27
	.  error


state 23
	const_define:  FCONST IDENTIFIER.ASSIGN explicit_value 

	ASSIGN  shift 28
	.  error


state 24
	struct_define:  STRUCT IDENTIFIER struct_mem_declaration.END 
	struct_mem_declaration:  struct_mem_declaration.IDENTIFIER 

	END  shift 29
	IDENTIFIER  shift 30
	.  error


state 25
	struct_mem_declaration:  IDENTIFIER.    (15)

	.  reduce 15 (src line 166)


state 26
	body:  body function_declaration.    (22)

	.  reduce 22 (src line 201)


state 27
	function_declaration:  FUNC IDENTIFIER.OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET block END 
	function_declaration:  FUNC IDENTIFIER.OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET END 

	OPEN_BRACKET  shift 31
	.  error


state 28
	const_define:  FCONST IDENTIFIER ASSIGN.explicit_value 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	NUMBER  shift 35
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 32

state 29
	struct_define:  STRUCT IDENTIFIER struct_mem_declaration END.    (12)

	.  reduce 12 (src line 142)


state 30
	struct_mem_declaration:  struct_mem_declaration IDENTIFIER.    (14)

	.  reduce 14 (src line 157)


state 31
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET.function_declaration_arguments CLOSE_BRACKET block END 
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET.function_declaration_arguments CLOSE_BRACKET END 
	function_declaration_arguments: .    (25)

	IDENTIFIER  shift 44
	.  reduce 25 (src line 233)

	function_declaration_arguments  goto 42
	arg  goto 43

state 32
	const_define:  FCONST IDENTIFIER ASSIGN explicit_value.    (19)

	.  reduce 19 (src line 186)


state 33
	explicit_value:  FTRUE.    (130)

	.  reduce 130 (src line 1222)


state 34
	explicit_value:  FFALSE.    (131)

	.  reduce 131 (src line 1231)


state 35
	explicit_value:  NUMBER.    (132)

	.  reduce 132 (src line 1240)


state 36
	explicit_value:  FKUUID.    (133)

	.  reduce 133 (src line 1249)


state 37
	explicit_value:  STRING_DEFINITION.    (134)

	.  reduce 134 (src line 1258)


state 38
	explicit_value:  FKFLOAT.    (135)

	.  reduce 135 (src line 1267)


state 39
	explicit_value:  FNULL.    (136)

	.  reduce 136 (src line 1276)


40: shift/reduce conflict (shift 33(0), red'n 139(0)) on FTRUE
40: shift/reduce conflict (shift 34(0), red'n 139(0)) on FFALSE
40: shift/reduce conflict (shift 37(0), red'n 139(0)) on STRING_DEFINITION
40: shift/reduce conflict (shift 35(0), red'n 139(0)) on NUMBER
40: shift/reduce conflict (shift 38(0), red'n 139(0)) on FKFLOAT
40: shift/reduce conflict (shift 36(0), red'n 139(0)) on FKUUID
40: shift/reduce conflict (shift 41(0), red'n 139(0)) on OPEN_SQUARE_BRACKET
40: shift/reduce conflict (shift 40(0), red'n 139(0)) on OPEN_BIG_BRACKET
40: shift/reduce conflict (shift 39(0), red'n 139(0)) on FNULL
state 40
	explicit_value:  OPEN_BIG_BRACKET.const_map_list_value CLOSE_BIG_BRACKET 
	const_map_list_value: .    (139)

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	NUMBER  shift 35
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  reduce 139 (src line 1307)

	explicit_value  goto 47
	const_map_list_value  goto 45
	const_map_value  goto 46

41: shift/reduce conflict (shift 33(0), red'n 143(0)) on FTRUE
41: shift/reduce conflict (shift 34(0), red'n 143(0)) on FFALSE
41: shift/reduce conflict (shift 37(0), red'n 143(0)) on STRING_DEFINITION
41: shift/reduce conflict (shift 35(0), red'n 143(0)) on NUMBER
41: shift/reduce conflict (shift 38(0), red'n 143(0)) on FKFLOAT
41: shift/reduce conflict (shift 36(0), red'n 143(0)) on FKUUID
41: shift/reduce conflict (shift 41(0), red'n 143(0)) on OPEN_SQUARE_BRACKET
41: shift/reduce conflict (shift 40(0), red'n 143(0)) on OPEN_BIG_BRACKET
41: shift/reduce conflict (shift 39(0), red'n 143(0)) on FNULL
state 41
	explicit_value:  OPEN_SQUARE_BRACKET.const_array_list_value CLOSE_SQUARE_BRACKET 
	const_array_list_value: .    (143)

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	NUMBER  shift 35
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  reduce 143 (src line 1344)

	explicit_value  goto 49
	const_array_list_value  goto 48

state 42
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments.CLOSE_BRACKET block END 
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments.CLOSE_BRACKET END 
	function_declaration_arguments:  function_declaration_arguments.ARG_SPLITTER arg 

	ARG_SPLITTER  shift 51
	CLOSE_BRACKET  shift 50
	.  error


state 43
	function_declaration_arguments:  arg.    (27)

	.  reduce 27 (src line 247)


state 44
	arg:  IDENTIFIER.    (28)

	.  reduce 28 (src line 257)


state 45
	explicit_value:  OPEN_BIG_BRACKET const_map_list_value.CLOSE_BIG_BRACKET 
	const_map_list_value:  const_map_list_value.const_map_value 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	NUMBER  shift 35
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	OPEN_BIG_BRACKET  shift 40
	CLOSE_BIG_BRACKET  shift 52
	FNULL  shift 39
	.  error

	explicit_value  goto 47
	const_map_value  goto 53

state 46
	const_map_list_value:  const_map_value.    (140)

	.  reduce 140 (src line 1314)


state 47
	const_map_value:  explicit_value.COLON explicit_value 

	COLON  shift 54
	.  error


state 48
	explicit_value:  OPEN_SQUARE_BRACKET const_array_list_value.CLOSE_SQUARE_BRACKET 
	const_array_list_value:  const_array_list_value.explicit_value 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	NUMBER  shift 35
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	CLOSE_SQUARE_BRACKET  shift 55
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 56

state 49
	const_array_list_value:  explicit_value.    (144)

	.  reduce 144 (src line 1351)


state 50
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET.block END 
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET.END 

	VAR_BEGIN  shift 91
	RETURN  shift 77
	BREAK  shift 80
	WHILE  shift 75
	FTRUE  shift 33
	FFALSE  shift 34
	IF  shift 76
	END  shift 58
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 82
	FKFLOAT  shift 38
	FOR  shift 86
	FAKE  shift 87
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	CONTINUE  shift 81
	YIELD  shift 89
	SLEEP  shift 88
	SWITCH  shift 90
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 96
	block  goto 57
	function_call  goto 83
	variable  goto 85
	expr_value  goto 94
	stmt  goto 59
	while_stmt  goto 60
	if_stmt  goto 61
	return_stmt  goto 62
	assign_stmt  goto 63
	multi_assign_stmt  goto 64
	break  goto 65
	continue  goto 66
	expr  goto 67
	math_assign_stmt  goto 68
	for_stmt  goto 69
	for_loop_stmt  goto 70
	fake_call_stmt  goto 71
	sleep  goto 72
	yield  goto 73
	switch_stmt  goto 74
	var  goto 78
	var_list  goto 79
	math_expr  goto 84

state 51
	function_declaration_arguments:  function_declaration_arguments ARG_SPLITTER.arg 

	IDENTIFIER  shift 44
	.  error

	arg  goto 97

state 52
	explicit_value:  OPEN_BIG_BRACKET const_map_list_value CLOSE_BIG_BRACKET.    (137)

	.  reduce 137 (src line 1285)


state 53
	const_map_list_value:  const_map_list_value const_map_value.    (141)

	.  reduce 141 (src line 1322)


state 54
	const_map_value:  explicit_value COLON.explicit_value 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	NUMBER  shift 35
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 98

state 55
	explicit_value:  OPEN_SQUARE_BRACKET const_array_list_value CLOSE_SQUARE_BRACKET.    (138)

	.  reduce 138 (src line 1295)


state 56
	const_array_list_value:  const_array_list_value explicit_value.    (145)

	.  reduce 145 (src line 1359)


state 57
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET block.END 
	block:  block.stmt 

	VAR_BEGIN  shift 91
	RETURN  shift 77
	BREAK  shift 80
	WHILE  shift 75
	FTRUE  shift 33
	FFALSE  shift 34
	IF  shift 76
	END  shift 99
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 82
	FKFLOAT  shift 38
	FOR  shift 86
	FAKE  shift 87
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	CONTINUE  shift 81
	YIELD  shift 89
	SLEEP  shift 88
	SWITCH  shift 90
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 96
	function_call  goto 83
	variable  goto 85
	expr_value  goto 94
	stmt  goto 100
	while_stmt  goto 60
	if_stmt  goto 61
	return_stmt  goto 62
	assign_stmt  goto 63
	multi_assign_stmt  goto 64
	break  goto 65
	continue  goto 66
	expr  goto 67
	math_assign_stmt  goto 68
	for_stmt  goto 69
	for_loop_stmt  goto 70
	fake_call_stmt  goto 71
	sleep  goto 72
	yield  goto 73
	switch_stmt  goto 74
	var  goto 78
	var_list  goto 79
	math_expr  goto 84

state 58
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET END.    (24)

	.  reduce 24 (src line 219)


state 59
	block:  stmt.    (39)

	.  reduce 39 (src line 384)


state 60
	stmt:  while_stmt.    (40)

	.  reduce 40 (src line 394)


state 61
	stmt:  if_stmt.    (41)

	.  reduce 41 (src line 400)


state 62
	stmt:  return_stmt.    (42)

	.  reduce 42 (src line 406)


state 63
	stmt:  assign_stmt.    (43)

	.  reduce 43 (src line 412)


state 64
	stmt:  multi_assign_stmt.    (44)

	.  reduce 44 (src line 418)


state 65
	stmt:  break.    (45)

	.  reduce 45 (src line 424)


state 66
	stmt:  continue.    (46)

	.  reduce 46 (src line 430)


state 67
	stmt:  expr.    (47)

	.  reduce 47 (src line 436)


state 68
	stmt:  math_assign_stmt.    (48)

	.  reduce 48 (src line 442)


state 69
	stmt:  for_stmt.    (49)

	.  reduce 49 (src line 448)


state 70
	stmt:  for_loop_stmt.    (50)

	.  reduce 50 (src line 454)


state 71
	stmt:  fake_call_stmt.    (51)

	.  reduce 51 (src line 460)


state 72
	stmt:  sleep.    (52)

	.  reduce 52 (src line 466)


state 73
	stmt:  yield.    (53)

	.  reduce 53 (src line 472)


state 74
	stmt:  switch_stmt.    (54)

	.  reduce 54 (src line 478)


state 75
	while_stmt:  WHILE.cmp THEN block END 
	while_stmt:  WHILE.cmp THEN END 

	FTRUE  shift 104
	FFALSE  shift 105
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 102
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	IS  shift 106
	NOT  shift 107
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 108
	function_call  goto 83
	variable  goto 109
	expr_value  goto 94
	expr  goto 110
	cmp  goto 101
	cmp_value  goto 103
	math_expr  goto 84

state 76
	if_stmt:  IF.cmp THEN block elseif_stmt_list else_stmt END 
	if_stmt:  IF.cmp THEN elseif_stmt_list else_stmt END 

	FTRUE  shift 104
	FFALSE  shift 105
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 102
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	IS  shift 106
	NOT  shift 107
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 108
	function_call  goto 83
	variable  goto 109
	expr_value  goto 94
	expr  goto 110
	cmp  goto 111
	cmp_value  goto 103
	math_expr  goto 84

77: shift/reduce conflict (shift 33(0), red'n 89(0)) on FTRUE
77: shift/reduce conflict (shift 34(0), red'n 89(0)) on FFALSE
77: shift/reduce conflict (shift 37(0), red'n 89(0)) on STRING_DEFINITION
77: shift/reduce conflict (shift 92(0), red'n 89(0)) on IDENTIFIER
77: shift/reduce conflict (shift 35(0), red'n 89(0)) on NUMBER
77: shift/reduce conflict (shift 82(0), red'n 89(0)) on OPEN_BRACKET
77: shift/reduce conflict (shift 38(0), red'n 89(0)) on FKFLOAT
77: shift/reduce conflict (shift 36(0), red'n 89(0)) on FKUUID
77: shift/reduce conflict (shift 41(0), red'n 89(0)) on OPEN_SQUARE_BRACKET
77: shift/reduce conflict (shift 93(0), red'n 89(0)) on IDENTIFIER_DOT
77: shift/reduce conflict (shift 95(0), red'n 89(0)) on IDENTIFIER_POINTER
77: shift/reduce conflict (shift 40(0), red'n 89(0)) on OPEN_BIG_BRACKET
77: shift/reduce conflict (shift 39(0), red'n 89(0)) on FNULL
state 77
	return_stmt:  RETURN.return_value_list 
	return_stmt:  RETURN.    (89)

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 82
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  reduce 89 (src line 859)

	explicit_value  goto 114
	function_call  goto 83
	variable  goto 115
	expr_value  goto 94
	expr  goto 116
	return_value_list  goto 112
	return_value  goto 113
	math_expr  goto 84

78: shift/reduce conflict (shift 117(0), red'n 100(0)) on ASSIGN
78: shift/reduce conflict (shift 118(0), red'n 100(0)) on NEW_ASSIGN
state 78
	assign_stmt:  var.ASSIGN assign_value 
	assign_stmt:  var.NEW_ASSIGN assign_value 
	var_list:  var.    (100)

	ASSIGN  shift 117
	NEW_ASSIGN  shift 118
	.  reduce 100 (src line 961)


state 79
	multi_assign_stmt:  var_list.ASSIGN function_call 
	multi_assign_stmt:  var_list.NEW_ASSIGN function_call 
	var_list:  var_list.ARG_SPLITTER var 

	ARG_SPLITTER  shift 121
	ASSIGN  shift 119
	NEW_ASSIGN  shift 120
	.  error


state 80
	break:  BREAK.    (146)

	.  reduce 146 (src line 1370)


state 81
	continue:  CONTINUE.    (147)

	.  reduce 147 (src line 1379)


state 82
	expr:  OPEN_BRACKET.expr CLOSE_BRACKET 
	math_expr:  OPEN_BRACKET.math_expr CLOSE_BRACKET 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 82
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 96
	function_call  goto 83
	variable  goto 124
	expr_value  goto 94
	expr  goto 122
	math_expr  goto 123

83: shift/reduce conflict (shift 125(0), red'n 117(0)) on OPEN_BRACKET
state 83
	function_call:  function_call.OPEN_BRACKET function_call_arguments CLOSE_BRACKET 
	function_call:  function_call.COLON IDENTIFIER OPEN_BRACKET function_call_arguments CLOSE_BRACKET 
	expr:  function_call.    (117)
	expr_value:  function_call.    (128)

	DIVIDE_MOD  reduce 128 (src line 1208)
	PLUS  reduce 128 (src line 1208)
	MINUS  reduce 128 (src line 1208)
	DIVIDE  reduce 128 (src line 1208)
	MULTIPLY  reduce 128 (src line 1208)
	OPEN_BRACKET  shift 125
	COLON  shift 126
	STRING_CAT  reduce 128 (src line 1208)
	.  reduce 117 (src line 1114)


state 84
	expr:  math_expr.    (118)
	expr_value:  math_expr.    (126)

	DIVIDE_MOD  reduce 126 (src line 1196)
	PLUS  reduce 126 (src line 1196)
	MINUS  reduce 126 (src line 1196)
	DIVIDE  reduce 126 (src line 1196)
	MULTIPLY  reduce 126 (src line 1196)
	STRING_CAT  reduce 126 (src line 1196)
	.  reduce 118 (src line 1120)


state 85
	function_call:  variable.COLON IDENTIFIER OPEN_BRACKET function_call_arguments CLOSE_BRACKET 
	math_assign_stmt:  variable.PLUS_ASSIGN assign_value 
	math_assign_stmt:  variable.MINUS_ASSIGN assign_value 
	math_assign_stmt:  variable.DIVIDE_ASSIGN assign_value 
	math_assign_stmt:  variable.MULTIPLY_ASSIGN assign_value 
	math_assign_stmt:  variable.DIVIDE_MOD_ASSIGN assign_value 
	math_assign_stmt:  variable.INC 
	var:  variable.    (111)
	expr_value:  variable.    (129)

	ARG_SPLITTER  reduce 111 (src line 1065)
	ASSIGN  reduce 111 (src line 1065)
	PLUS_ASSIGN  shift 128
	MINUS_ASSIGN  shift 129
	DIVIDE_ASSIGN  shift 130
	MULTIPLY_ASSIGN  shift 131
	DIVIDE_MOD_ASSIGN  shift 132
	COLON  shift 127
	INC  shift 133
	NEW_ASSIGN  reduce 111 (src line 1065)
	.  reduce 129 (src line 1214)


state 86
	for_stmt:  FOR.block ARG_SPLITTER cmp ARG_SPLITTER block THEN block END 
	for_stmt:  FOR.block ARG_SPLITTER cmp ARG_SPLITTER block THEN END 
	for_loop_stmt:  FOR.var ASSIGN assign_value RIGHT_POINTER cmp_value ARG_SPLITTER expr_value THEN block END 
	for_loop_stmt:  FOR.var ASSIGN assign_value RIGHT_POINTER cmp_value ARG_SPLITTER expr_value THEN END 

	VAR_BEGIN  shift 91
	RETURN  shift 77
	BREAK  shift 80
	WHILE  shift 75
	FTRUE  shift 33
	FFALSE  shift 34
	IF  shift 76
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 82
	FKFLOAT  shift 38
	FOR  shift 86
	FAKE  shift 87
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	CONTINUE  shift 81
	YIELD  shift 89
	SLEEP  shift 88
	SWITCH  shift 90
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 96
	block  goto 134
	function_call  goto 83
	variable  goto 85
	expr_value  goto 94
	stmt  goto 59
	while_stmt  goto 60
	if_stmt  goto 61
	return_stmt  goto 62
	assign_stmt  goto 63
	multi_assign_stmt  goto 64
	break  goto 65
	continue  goto 66
	expr  goto 67
	math_assign_stmt  goto 68
	for_stmt  goto 69
	for_loop_stmt  goto 70
	fake_call_stmt  goto 71
	sleep  goto 72
	yield  goto 73
	switch_stmt  goto 74
	var  goto 135
	var_list  goto 79
	math_expr  goto 84

state 87
	fake_call_stmt:  FAKE.function_call 

	IDENTIFIER  shift 92
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	.  error

	function_call  goto 136
	variable  goto 137

state 88
	sleep:  SLEEP.expr_value 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 141
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 96
	function_call  goto 140
	variable  goto 124
	expr_value  goto 138
	math_expr  goto 139

state 89
	yield:  YIELD.expr_value 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 141
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 96
	function_call  goto 140
	variable  goto 124
	expr_value  goto 142
	math_expr  goto 139

state 90
	switch_stmt:  SWITCH.cmp_value switch_case_list DEFAULT block END 
	switch_stmt:  SWITCH.cmp_value switch_case_list DEFAULT END 

	FTRUE  shift 33
	FFALSE  shift 34
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 82
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 108
	function_call  goto 83
	variable  goto 109
	expr_value  goto 94
	expr  goto 110
	cmp_value  goto 143
	math_expr  goto 84

state 91
	var:  VAR_BEGIN.IDENTIFIER 

	IDENTIFIER  shift 144
	.  error


92: shift/reduce conflict (shift 145(0), red'n 112(0)) on OPEN_BRACKET
92: shift/reduce conflict (shift 146(0), red'n 112(0)) on OPEN_SQUARE_BRACKET
state 92
	function_call:  IDENTIFIER.OPEN_BRACKET function_call_arguments CLOSE_BRACKET 
	variable:  IDENTIFIER.    (112)
	variable:  IDENTIFIER.OPEN_SQUARE_BRACKET expr_value CLOSE_SQUARE_BRACKET 

	OPEN_BRACKET  shift 145
	OPEN_SQUARE_BRACKET  shift 146
	.  reduce 112 (src line 1073)


93: shift/reduce conflict (shift 147(0), red'n 115(0)) on OPEN_BRACKET
state 93
	function_call:  IDENTIFIER_DOT.OPEN_BRACKET function_call_arguments CLOSE_BRACKET 
	variable:  IDENTIFIER_DOT.    (115)

	OPEN_BRACKET  shift 147
	.  reduce 115 (src line 1098)


state 94
	math_expr:  expr_value.PLUS expr_value 
	math_expr:  expr_value.MINUS expr_value 
	math_expr:  expr_value.MULTIPLY expr_value 
	math_expr:  expr_value.DIVIDE expr_value 
	math_expr:  expr_value.DIVIDE_MOD expr_value 
	math_expr:  expr_value.STRING_CAT expr_value 

	DIVIDE_MOD  shift 152
	PLUS  shift 148
	MINUS  shift 149
	DIVIDE  shift 151
	MULTIPLY  shift 150
	STRING_CAT  shift 153
	.  error


state 95
	variable:  IDENTIFIER_POINTER.    (114)

	.  reduce 114 (src line 1090)


state 96
	expr_value:  explicit_value.    (127)

	.  reduce 127 (src line 1202)


state 97
	function_declaration_arguments:  function_declaration_arguments ARG_SPLITTER arg.    (26)

	.  reduce 26 (src line 238)


state 98
	const_map_value:  explicit_value COLON explicit_value.    (142)

	.  reduce 142 (src line 1333)


state 99
	function_declaration:  FUNC IDENTIFIER OPEN_BRACKET function_declaration_arguments CLOSE_BRACKET block END.    (23)

	.  reduce 23 (src line 207)


state 100
	block:  block stmt.    (38)

	.  reduce 38 (src line 375)


state 101
	while_stmt:  WHILE cmp.THEN block END 
	while_stmt:  WHILE cmp.THEN END 
	cmp:  cmp.AND cmp 
	cmp:  cmp.OR cmp 

	THEN  shift 154
	AND  shift 155
	OR  shift 156
	.  error


state 102
	cmp:  OPEN_BRACKET.cmp CLOSE_BRACKET 
	expr:  OPEN_BRACKET.expr CLOSE_BRACKET 
	math_expr:  OPEN_BRACKET.math_expr CLOSE_BRACKET 

	FTRUE  shift 104
	FFALSE  shift 105
	STRING_DEFINITION  shift 37
	IDENTIFIER  shift 92
	NUMBER  shift 35
	OPEN_BRACKET  shift 102
	FKFLOAT  shift 38
	FKUUID  shift 36
	OPEN_SQUARE_BRACKET  shift 41
	IDENTIFIER_DOT  shift 93
	IDENTIFIER_POINTER  shift 95
	IS  shift 106
	NOT  shift 107
	OPEN_BIG_BRACKET  shift 40
	FNULL  shift 39
	.  error

	explicit_value  goto 108
	function_call  goto 83
	variable  goto 109
	expr_value  goto 94
	expr  goto 158
	cmp  goto 157
	cmp_value  goto 103
	math_expr  goto 123
